--- a/boardgame.css
+++ b/boardgame.css
@@ -21,18 +21,15 @@ body {
   left: 0;
   width: 100%;
   height: 116px;
-  background: linear-gradient(120deg, #1f5eff 0%, #26c1ff 40%, #8a66ff 100%);
-  animation: huerotator 30s infinite alternate;
+  background: linear-gradient(120deg, #1f5eff 0%, #26c1ff 100%);
 }
 
-@keyframes huerotator {
-  0% {
-    filter: hue-rotate(0deg);
-  }
+.body_1 #dialogue {
+  background: linear-gradient(120deg, #1f5eff 0%, #26c1ff 100%);
+}
 
-  100% {
-    filter: hue-rotate(360deg);
-  }
+.body_2 #dialogue {
+  background: linear-gradient(120deg, #c5004f 0%, #ff7aa8 100%);
 }
 
 #dialogue2 {
